<resources>
    <string name="app_name">Lib.Rus.Ec Client</string>
    <string name="search_by_author">Поиск по авторам</string>
    <string name="search_by_series">Поиск по сериям</string>
    <string name="search_by_genres">Поиск по жанрам</string>
    <string name="search_by_titles">Поиск по наименованиям</string>
    <string name="database">База Данных</string>
    <string name="selected">Selected:</string>
    <string name="home">Домой</string>
    <string name="back">Назад</string>
    <string name="search">Search</string>
    <string name="books_by_series">Книги по сериям</string>
    <string name="books_without_series">Книги без серий</string>
    <string name="books_by_genres">Книги по жанрам</string>
    <string name="books_by_alphabet">Книги по алфавиту</string>
    <string name="books_by_date">Книги по дате поступления</string>
    <string name="https_www_flaticon_com_free_icons_back_button">https://www.flaticon.com/free-icons/back-button</string>
    <string name="https_www_flaticon_com_free_icons_home_button">https://www.flaticon.com/free-icons/home-button</string>
    <string name="authors_by_genre">Авторы по жанру</string>
    <string name="series_by_genre">Серии по жанру</string>
    <string name="books_by_genre">Книги по жанру</string>
    <string name="read_book">Читать</string>
    <string name="authors_list">Авторы</string>
    <string name="books_in_serie">Книги в серии</string>
    <string name="last_books">Недавние книги</string>
    <string name="last_authors">Недавние авторы</string>
    <string name="last_series">Недавние серии</string>
</resources>