<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="6dp">

    <Button
        android:id="@+id/search_authors"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/search_by_author" />

    <Button
        android:id="@+id/search_series"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/search_by_series" />

    <Button
        android:id="@+id/search_by_genres"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/search_by_genres" />

    <Button
        android:id="@+id/search_titles"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/search_by_titles" />

    <Button
        android:id="@+id/last_books"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/last_books" />

    <Button
        android:id="@+id/last_authors"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/last_authors" />

</LinearLayout>